@@ -1,0 +1,89 @@
+# NAME: H4RG_QE_design.txt
+# DATE: 06/02/18 12:33:57
+# TYPE: H4RG QE curve
+# VERSION: 1.0
+# 
+# Wavelength[um] QE_percent
+0.326183,24.6455
+0.335054,25.9755
+0.340349,28.0651
+0.343851,30.8194
+0.350784,39.7467
+0.352354,49.8132
+0.353918,60.1647
+0.359050,70.1365
+0.362445,78.0190
+0.371272,81.4383
+0.385550,79.5398
+0.412272,78.3069
+0.419351,80.2066
+0.428222,81.5367
+0.444270,80.1131
+0.454972,78.9742
+0.472740,80.3997
+0.490500,82.2051
+0.501145,83.8202
+0.513565,85.6253
+0.529561,86.6709
+0.538452,87.0513
+0.554486,86.2925
+0.572315,84.7741
+0.595491,82.8761
+0.615112,80.7880
+0.640063,79.1751
+0.668574,77.4674
+0.700637,76.1397
+0.727348,75.4765
+0.743365,75.4775
+0.782516,75.6698
+0.810972,76.6211
+0.850087,78.5228
+0.887430,80.0445
+0.926539,82.2310
+0.960311,84.3223
+0.997640,86.5088
+1.03142,88.4101
+1.06520,90.0265
+1.09542,91.6428
+1.12565,92.9741
+1.16477,94.6858
+1.20211,96.1125
+1.24124,97.3494
+1.28216,98.2066
+1.32842,98.9690
+1.38002,99.1620
+1.43342,99.0702
+1.48148,98.8832
+1.55623,98.5077
+1.64524,97.3734
+1.76453,95.5761
+1.83574,94.6307
+1.90695,93.4003
+1.97105,92.2645
+2.05294,91.0348
+2.12416,89.7095
+2.20071,88.6694
+2.28617,87.1550
+2.35026,86.3041
+2.40188,85.7374
+2.41970,84.8838
+2.48733,84.6978
+2.53543,82.7064
+2.54263,78.6232
+2.54990,71.5012
+2.55180,65.8982
+2.56081,60.2957
+2.56270,54.9777
+2.56993,49.9449
+2.57363,43.0125
+2.57913,35.2255
+2.58102,30.0025
+2.58468,25.1594
+2.59191,20.1266
+2.59734,15.3785
+2.60636,9.87100
+2.61176,6.83238
+2.62606,4.07919
+2.62788,1.89506
+2.67775,0.378547
+2.69552,1.51920
